deploy on versel3

--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
         "dest": "index.js"
       },
       {
-        "src": "/add",
+        "src": "/addproduct",
         "dest": "build/index.html"
       },
       {
